--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/chenzuo/webpack-demo/issues"
   },
-  "homepage": "https://github.com/chenzuo/webpack-demo#readme"
+  "homepage": "https://github.com/chenzuo/webpack-demo#readme",
+  "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3"
+  }
 }
